--- a/Esmailin_Martinez_P2_AP1/Components/Pages/Home.razor
+++ b/Esmailin_Martinez_P2_AP1/Components/Pages/Home.razor
@@ -2,6 +2,7 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Aplicada1 Parcial 2</h1>
 
-Welcome to your new app.
+Esmailin Martinez
+2022-0414
