--- a/Esmailin_Martinez_P2_AP1/Components/_Imports.razor
+++ b/Esmailin_Martinez_P2_AP1/Components/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.JSInterop
 @using Esmailin_Martinez_P2_AP1
 @using Esmailin_Martinez_P2_AP1.Components
+@using Esmailin_Martinez_P2_AP1.Services
+@using Esmailin_Martinez_P2_AP1.Models
